@@ -1,3 +1,5 @@
+2005/9/24 -- released version 20050924_trunk
+
 2005/9/23 -- released version 20050923_trunk
 
 2005/9/22 -- released version 20050922_trunk
